<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <LinearLayout
        android:layout_width="201dp"
        android:layout_height="397dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle">

        <Button
            android:id="@+id/button_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:onClick="onClickLanzarActivity"

            android:padding="20sp"
            android:text="@string/main_news_button_text"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/button_restriction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:onClick="onClickLanzarActivity"
            android:padding="20sp"
            android:text="@string/main_restriction_button_text"
            android:textSize="21sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/button_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"

            android:onClick="onClickLanzarActivity"
            android:padding="20sp"
            android:text="@string/main_state_button_text"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>