<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.NewsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleNews"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/title_news"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/new1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="#B0026F93">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_new1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/new1_title"
                        app:srcCompat="@drawable/img_prueba" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/new1_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new1_title"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/new1_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLength="500"
                            android:maxLines="3"
                            android:text="@string/new1_text" />

                        <Button
                            android:id="@+id/button_new1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_new" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/new2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="#B0026F93">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_new2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/new2_title"
                        app:srcCompat="@drawable/img_prueba" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/new2_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new2_title"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/new2_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLength="500"
                            android:maxLines="3"
                            android:text="@string/new2_text" />

                        <Button
                            android:id="@+id/button_new2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_new" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/new3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="#B0026F93">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_new3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/new3_title"
                        app:srcCompat="@drawable/img_prueba" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/new3_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new3_title"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/new3_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLength="500"
                            android:maxLines="3"
                            android:text="@string/new3_text" />

                        <Button
                            android:id="@+id/button_new3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_new" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_volver_news"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="volverMainActivity"
        android:text="@string/button_volver"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>